# acmicpc

./: .breakpoints  .gitignore  README.md  _.py  __.py  bak_input  input  input.bck  main.py  mex.py  nojam.py  nojam_v2.py  output.acmicpc  pyproject.toml  test.py  test2.py  unused.py  util.py  wrapper.py
Unsolved/: 18015(어려운 계단 수).py
algorithms/: 2-SAT.ipynb  Convex Hull(볼록껍질).ipynb  Counter clockwise(CCW).ipynb  Dynamic programming(동적계획법).ipynb  Game Theory.ipynb  Geomatry(기하).ipynb  Geomatry2(기하2).ipynb  Geometry and Vector.ipynb  Graph traversal(그래프탐색).ipynb  Greedy Algorithm.ipynb  Greedy.ipynb  KMP.ipynb  Lazy Propagation.ipynb  Longest Increasing Subsequence.ipynb  Lowest Common Ancester(최소공통조상).ipynb  Lowest Common Ancester.ipynb  Monotonic Queue(단조 큐).ipynb  Segment tree.ipynb  Strongly Connected Component & 2-SAT.ipynb  Strongly Connected Component.ipynb  Topology sort(위상 정렬).ipynb  Topology sort.ipynb  Two Satisfactory.ipynb  Vector(벡터).ipynb  ascii.ipynb  binary search(이분탐색).ipynb  bitmasking.ipynb  combinations(조합론).ipynb  geomatry(기하).ipynb  graph traversal(그래프탐색).ipynb  graph(그래프).ipynb  inclusion-exclusion(포함배제) principle.ipynb  ipynb.ipynb  number theory(정수론).ipynb  number theory2.ipynb  relation과 순서관계.ipynb  shortest path(최단경로).ipynb  sweeping(스위핑).ipynb  time complexity.ipynb  trie.ipynb  (+6 more)
archieve/: 1003(피보나치 함수).py  10828(스택).py  10845(스택).py  10866(덱).py  1149(RGB거리).py  11723(집합).py  1260(DFS와 BFS).py  13544(수열과 쿼리 3).ipynb  1654(랜선 자르기).py  18111(마인크래프트).py  1912(연속합).py  1932(정수 삼각형).py  1966(프린터 큐).py  2447(별찍기 - 10).py  3651(이항계수).py  백준.ipynb  (+2 more)
(+888 files in other folders)
